--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   url_launcher: ^5.5.0
   google_fonts: ^1.1.0
-
+  puppeteer: ^1.18.0
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
