--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,8 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   url_launcher: ^5.5.0
   google_fonts: ^1.1.0
-  puppeteer: ^1.18.0
-  
+  native_pdf_view: ^3.8.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
@@ -50,6 +50,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
 assets:
  - assets/blendericon.png
+ - assets/Imprimir Certificado.pdf
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
