--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,8 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   url_launcher: ^5.5.0
   google_fonts: ^1.1.0
-  native_pdf_view: ^3.8.0
-
+  responsive_builder: ^0.2.0+2
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
