--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,8 @@ dependencies:
   url_launcher: ^5.5.0
   google_fonts: ^1.1.0
   responsive_builder: ^0.2.0+2
-  
+  screenshot: ^0.2.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
