--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,9 @@ dependencies:
   google_fonts: ^1.1.0
   responsive_builder: ^0.2.0+2
   screenshot: ^0.2.0
+  flutter_email_sender: ^3.0.1
 
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
