--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: mypersonal3dcv
-description: Hoja de Vida Jhonatan Sabayé
+description: Hoja de Vida
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -30,7 +30,7 @@ dependencies:
   screenshot: ^0.2.0
   flutter_email_sender: ^3.0.1
 
-  
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
