--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,9 @@ dependencies:
   responsive_builder: ^0.2.0+2
   screenshot: ^0.2.0
   flutter_email_sender: ^3.0.1
-
-
+  stacked_services: ^0.5.2
+  get_it: ^4.0.4
+  auto_route:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
@@ -38,7 +39,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner:
+  auto_route_generator:
+    
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
